<resources>
    <string name="app_name">Laboratorio 05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_name">Billboard</string>
    <string name="new_movie_text">New Movie</string>
    <string name="name_text">Name</string>
    <string name="category_text">Category</string>
    <string name="description_text">Description</string>
    <string name="submit_button_text">submit</string>
    <string name="science_fiction_text">Ciencia Ficciòn</string>
    <string name="calification_starwars">9.8</string>
    <string name="starwars_lore">Una pelicula de naves espaciales, carreras clandestinas y ua trama que ni tu te das cuenta de que va :v</string>
    <string name="starwars_title">Star Wars episodio 3: La venganza de los Sith</string>
</resources>