<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="@color/backgroundLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginEnd="@dimen/small_gap"
            android:gravity="center"
            android:text="@string/new_movie_text"
            android:textColor="@color/white"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/standar_gap"
            android:layout_marginTop="@dimen/big_gap"
            android:layout_marginEnd="16dp"
            android:background="@color/cardLayout"

            android:hint="@string/name_text"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_sisz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/standar_gap"

            android:layout_marginTop="@dimen/standar_gap"
            android:layout_marginEnd="@dimen/standar_gap"
            android:background="@color/cardLayout"
            android:hint="@string/category_text"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_sisz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/standar_gap"

            android:layout_marginTop="@dimen/standar_gap"
            android:layout_marginEnd="@dimen/standar_gap"
            android:background="@color/cardLayout"
            android:hint="@string/description_text"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_sisz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText2" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_gap"
            android:layout_marginStart="@dimen/standar_gap"

            android:layout_marginTop="@dimen/standar_gap"
            android:layout_marginEnd="@dimen/standar_gap"
            android:background="@color/cardLayout"
            android:hint="Calification"
            android:textColorHint="@color/white"
            android:textSize="@dimen/medium_text_sisz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:text="@string/submit_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText4"
            android:backgroundTint="@color/buttonColor"/>

    </androidx.constraintlayout.widget.ConstraintLayout>






</FrameLayout>